# whoop-data

./: .env.example  .flake8  .gitignore  .gitmessage  .whoop_tokens.json  ANALYTICS_SUMMARY.md  CHANGELOG.md  CREATE_PR.md  Implement Upsert ETL and Fix Withings Data Loading.md  LICENSE  MIGRATION_v1.2.1.md  Makefile  PLOTTING_GUIDE.md  PR_WORKFLOW.md  README.md  README_OLD.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.1.md  RELEASE_NOTES_v1.7.1.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v2.1.0.md  TESTING_GUIDE.md  activate_env.sh  backend_testing.py  chat_app.py  cleanup_duplicates.py  db_setup.py  debug_api_response.py  debug_endpoints.py  docker-compose.yml  extract_transform_load_all.py  extract_transform_load_combined.py  fix_sleep_analytics.py  fix_sleep_id_mapping.py  generate_diagram.py  implement_analytics_enhancements.sh  instructions.md  langgraph.json  load_recovery.py  (+26 more)
.github/: CODEOWNERS  pull_request_template.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
analysis/: sleep_scoring.py  test.py  testing.py  whoop_client.py  whoop_data_extraction.py  whoop_data_extraction_transformation.py  whoop_extract_load.py  whoop_simple.py
api/: recovery_routes.py  sleep_routes.py  withings_routes.py  workout_routes.py
crud/: recovery.py  sleep.py  workout.py
custom_gpt/: authenticate.yaml  get_workout.yaml  make_webhook.json
data/: Daily activity metrics.csv  whoop.csv
django_whoop/: README.md  manage.py  requirements.txt  run.sh  test_api.sh
docs/: EXPERIMENTAL_FEATURES.md  PROTEIN_RECOMMENDATION_INTEGRATION.md  README.md
examples/: protein_recommendation_example.py
models/: factor_analyzer.pkl  models.py  recovery_predictor.pkl  sleep_predictor.pkl
notebooks/: recovery_improvement_modeling.ipynb
schedules/: com.whoopdata.etl.plist  com.whoopdata.morning.plist  com.whoopdata.proactive.plist  com.whoopdata.server.plist  com.whoopdata.telegram.plist  com.whoopdata.weakness.plist
schemas/: sleep.py  workout.py
scripts/: create_pr.sh  create_tables.py  daily_etl.sh  etl_with_notify.py  ingest_blood_test_pdf.py  migrate_add_whoop_id.py  pull_langsmith_traces.py  scheduled_etl.py  scheduled_morning.py  scheduled_proactive.py  scheduled_weakness.py  seed_biomarkers.py  telegram_hello.py  telegram_weakness_preview.py  test_cron.py  verify_system.py
templates/: analytics.html  base.html  dashboard.html  index.html  weekly_report.html
tests/: test_agent_architecture.py  test_agent_conversation_service.py  test_agent_memory_tools.py  test_agent_model_config.py  test_agent_routes.py  test_app_composition.py  test_biomarker_boundary.py  test_biomarker_kb_ingest.py  test_chat_app_boundary.py  test_conversation_service.py  test_daily_engine.py  test_docs_and_openapi_guidance.py  test_insight_service_extraction.py  test_legacy_route_deprecation.py  test_mlr.py  test_pdf_ingest.py  test_pose_analysis.py  test_proactive_coach.py  test_proactive_scripts.py  test_protein_tool.py  test_public_response_contract.py  test_public_surface_contract.py  test_public_surface_inventory.py  test_recovery_actionability_integration.py  test_recovery_actionability_service.py  test_telegram_blood_upload.py  test_telegram_bot_boundary.py  test_telegram_push.py  test_weakness_reminder.py  test_weakness_scripts.py  test_whoop_headless_refresh.py  test_whoop_v2_migration.py  test_withings.py
utils/: load_into_database.py  model_transformation.py
whoop_data/: database.py  etl.py  model_transformation.py  start.py  utils.py
whoopdata/: __version__.py  cli.py  database.py  etl.py  etl_incremental.py  model_transformation.py  setup.py  (+3 more)
(+170 files in other folders)
